update research page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <!-- Left Column: Text -->
                 <div class="col-md-6">
                     <h2 id="welcome">Welcome!</h2>
+                    <p></p>
+                    (website currently under construction)
+                    <p></p>
                     <p>I’m <strong>Marko Irisarri</strong>, PhD candidate in Economics at UPF. My research focuses on the field of Macroeconomics, particularly in the subfields of Quantitative Economics, Entrepreneurship, and Spatial Economics.</p>
                     <p>My interest lies in studying the interaction between inequality/heterogeneity and Macroeconomics. I am currently studying the implications of heterogeneous returns to capital stemming from financial frictions for (i) capital, wealth and inheritance taxation and (ii) place-based entrepreneurial subsidies.  </p>
                     <p>Contact me by <a href="mailto:marko.irisarri@upf.edu">email</a>.<br>
