--- a/cv/index.html
+++ b/cv/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=""><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang=""><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -16,7 +16,7 @@
 
     <body><div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
-        <a class="navbar-brand mx-0 mr-sm-auto" href="http://localhost:1313/" title="Marko Irisarri">
+        <a class="navbar-brand mx-0 mr-sm-auto" href="https://markoirisarri.github.io/" title="Marko Irisarri">
           
           Marko Irisarri
         </a>
