--- a/research/_research/index.html
+++ b/research/_research/index.html
@@ -27,7 +27,7 @@
   <div class="container mb-3">
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{ .Site.BaseURL }}">
+      <a class="navbar-brand" href="https://markoirisarri.github.io/">
         <i class="fa fa-home"></i>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar">
