--- a/research/index.html
+++ b/research/index.html
@@ -151,6 +151,29 @@
                     </figure>
                 </div>
             </div>
+
+            
+            <div class="two-column-layout">
+                <!-- Content Column -->
+                <div class="content-column">
+                    <!-- Working Papers -->
+                    <h2 id="work-in-progress">Work in Progress</h2>
+                    <h3 id="intangible_capital">
+                        Intangible Capital, Lumpy Investment and the Business Cycle (joint with Andrea Chiavari and Sampreet Goraya)
+                    </h3>
+                </div>
+                
+                <!-- Figure Column -->
+                <div class="figure-column">
+                    <figure>
+                        <img src="/img/std_capitals.pdf"  width="800" height="400">
+                        <figcaption>Cyclical Component of Tangible and Intangible Investment</figcaption>
+                    </figure>
+                </div>
+            </div>
+
+
+
             <!--
             <div class="two-column-layout">
                 <div class="content-column">
