--- a/research/index.html
+++ b/research/index.html
@@ -166,7 +166,7 @@
                 <!-- Figure Column -->
                 <div class="figure-column">
                     <figure>
-                        <img src="/img/std_capitals.pdf"  width="800" height="400">
+                        <img src="/img/std_capitals.png"  width="800" height="400">
                         <figcaption>Cyclical Component of Tangible and Intangible Investment</figcaption>
                     </figure>
                 </div>
