--- a/research/index.html
+++ b/research/index.html
@@ -127,7 +127,7 @@
                 <div class="figure-column">
                     <figure>
                         <img src="/img/webpage__transfersbenchmark_share_gdp.png" width="600" height="400"></img>
-                        <figcaption>Welfare responses in the calibrated model to place-based lump-sum entrepreneurial transfers in Madrid (large, productive), Castelló (small, less productive) and the entire country.</figcaption>
+                        <figcaption>Welfare responses in the calibrated model to place-based lump-sum entrepreneurial transfers in Madrid (large, productive), Granada (small, less productive) and the entire country.</figcaption>
                     </figure>
                 </div>
             </div>
@@ -172,6 +172,44 @@
                 </div>
             </div>
 
+
+            <div class="two-column-layout">
+                <!-- Content Column -->
+                <div class="content-column">
+                    <!-- Working Papers -->
+                    <h2 id="work-in-progress">Work in Progress</h2>
+                    <h3 id="intangible_capital">
+                        Intangible Capital, Lumpy Investment and the Business Cycle (joint with Andrea Chiavari and Sampreet Goraya)
+                    </h3>
+                </div>
+                
+                <!-- Figure Column -->
+                <div class="figure-column">
+                    <figure>
+                        <img src="/img/std_capitals.png"  width="800" height="400">
+                        <figcaption>Cyclical Component of Tangible and Intangible Investment</figcaption>
+                    </figure>
+                </div>
+            </div>
+
+
+            <div class="two-column-layout">
+                <!-- Content Column -->
+                <div class="content-column">
+                    <!-- Working Papers -->
+                    <h3 id="india_floods">
+                    Floods and Adaptation Strategies: Evidence from Indian Manufacturing (joint with Alejandro Rábano and José Nicolás Rosas) <a href="extended_abstract_india.pdf" target="_blank">Extended Abstract</a>
+                    </h3>
+                </div>
+                
+                <!-- Figure Column -->
+                <div class="figure-column">
+                    <figure>
+                        <img src="/img/map_india_floods.jpg"  width="800" height="400">
+                        <figcaption>Spatial Distribution of Severe and Extreme Floods in India, by District</figcaption>
+                    </figure>
+                </div>
+            </div>
 
 
             <!--
