--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <!-- Right Column: Image, Centered and Circular -->
                 <div class="col-md-6 d-flex-center">
-                    <img src="img/image.png" alt="My Figure" class="circular-img">
+                    <img src="img/image.JPG" alt="My Figure" class="circular-img">
                 </div>
             </div>
         </div>
