--- a/research/index.html
+++ b/research/index.html
@@ -127,7 +127,7 @@
                 <div class="figure-column">
                     <figure>
                         <img src="/img/webpage__transfersbenchmark_share_gdp.png" width="600" height="400"></img>
-                        <figcaption>Welfare responses in the calibrated model to place-based lump-sum entrepreneurial transfers in Madrid (large, productive), Granada (small, less productive) and the entire country.</figcaption>
+                        <figcaption>Welfare responses in the calibrated model to place-based lump-sum entrepreneurial transfers in Barcelona (large, productive), Granada (small, less productive) and the entire country.</figcaption>
                     </figure>
                 </div>
             </div>
