--- a/research/index.html
+++ b/research/index.html
@@ -120,7 +120,20 @@
                     <h3 id="entrepreneurship-across-cities-uncovering-policy-implications">
                         Entrepreneurship Across Cities: Uncovering Policy Implications <a href="draft_jmp.pdf" target="_blank">Draft</a>
                     </h3>
-                    <p>Are entrepreneurs and their capital allocated optimally across space? Should governments employ place-based entrepreneurial policies? To study these questions, we first develop a dynamic spatial quantitative framework featuring financial frictions, dynamic capital accumulation, occupational and location choice and agglomeration forces. We then take this model to the largest 20 Urban Areas (UA) of the Spanish State by relying on rich administrative and balance sheet data. A key prediction of the model, which the data supports, is that there are heterogeneous returns to capital across space, and more productive UAs are more capital constrained. Second, we provide an efficient solution method by exploiting the parallel nature of GPUs in CUDA. Speed-ups in the range of 60 to 20,000 are obtained compared to standard methods. Third, the policy analysis suggests that, compared to a spatially neutral policy, targeting a subset of the most productive UAs achieves greater welfare and production gains. However, these policies pose a trade-off to policymakers between aggregate gains and increased regional disparities.</p>
+                    <p>Are entrepreneurs and their capital allocated optimally across space? Should governments
+                        employ place-based entrepreneurial policies? To study these questions, we first develop a
+                        dynamic spatial quantitative framework featuring financial frictions, dynamic capital accumulation,
+                        occupational and location choice and agglomeration forces. We then take this model
+                        to the largest 20 Urban Areas (UA) of the Spanish State by relying on rich administrative and
+                        balance sheet data. A key prediction of the model, which the data supports, is that there are
+                        heterogeneous returns to capital across space, and more productive UAs are more capital constrained.
+                        Intuitively, financial frictions, albeit symmetric, disproportionately hinder more productive
+                        UAs from reaching their production frontier. Second, we provide an efficient solution
+                        method by exploiting the parallel nature of GPUs in CUDA. Speed-ups in the range of 60 to
+                        20,000 are obtained compared to standard methods. Third, the policy analysis suggests that,
+                        compared to a spatially neutral policy, targeting a subset of the most productive UAs achieves
+                        greater welfare and production gains. However, these policies pose a trade-off to policymakers
+                        between aggregate gains and increased regional disparities.</p>
                 </div>
                 
                 <!-- Figure Column -->
