--- a/_cv/index.html
+++ b/_cv/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Chris Turner">
-    <link rel="shortcut icon" type="image/x-icon" href="http://localhost:1313/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="http://markoirisarri.github.io/img/favicon.ico">
     <title>Website under construction</title>
     <meta name="description" content="check cv at at at: ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -27,7 +27,7 @@
   <div class="container mb-3">
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="http://localhost:1313/">
+      <a class="navbar-brand" href="http://markoirisarri.github.io/">
         <i class="fa fa-home"></i>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar">
@@ -59,7 +59,7 @@
 
 
   <div class="container">
-    <h3 class="mt-3"><b><a href="http://localhost:1313/_cv/"></a></b></h3>
+    <h3 class="mt-3"><b><a href="http://markoirisarri.github.io/_cv/"></a></b></h3>
     <div class="blog-title my-4">
       <h6>
         January 1, 0001
