--- a/research/index.html
+++ b/research/index.html
@@ -133,7 +133,7 @@
                     <h3 id="entrepreneurship-across-cities-uncovering-policy-implications">
                         Entrepreneurship Across Cities: Uncovering Policy Implications <a href="draft_jmp.pdf" target="_blank">Draft</a>
                     </h3>
-                    <h5>Presented at: 14th European Meeting of the Urban Economics Association (to be presented), UPF Macroeconomics and International Lunch seminars, ANEKO seminar at UPV/EHU </h5>
+                    <h5>Presented at: The University of Manchester, 14th European Meeting of the Urban Economics Association (to be presented), UPF Macroeconomics and International Lunch seminars, ANEKO seminar at UPV/EHU </h5>
                     <p>Are entrepreneurs and their capital allocated optimally across space? Should governments
                         employ place-based entrepreneurial policies? To study these questions, we first develop a
                         dynamic spatial quantitative framework featuring financial frictions, dynamic capital accumulation,
