--- a/research/index.html
+++ b/research/index.html
@@ -205,7 +205,7 @@
                 <div class="content-column">
                     <!-- Working Papers -->
                     <h3 id="india_floods">
-                    Floods and Adaptation Strategies: Evidence from Indian Manufacturing (joint with Alejandro Rábano and José Nicolás Rosas) <a href="extended_abstract_india.pdf" target="_blank">Extended Abstract</a>
+                    Floods and Adaptation Strategies: Evidence from Indian Manufacturing (joint with Alejandro Rábano and José Nicolás Rosas) <a href="DraftFloodsAndAdaptationStrategies.pdf" target="_blank">Draft</a>
                     </h3>
                 </div>
                 
