--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p></p>
                     <p>I’m <strong>Marko Irisarri</strong>, and I am happy to announce that I have joined the University of Manchester as an AP in Economics! My research focuses on the field of Macroeconomics, particularly in the subfields of Quantitative Economics, Entrepreneurship, and Spatial Economics.</p>
                     <p>My interest lies in studying the interaction between inequality/heterogeneity and Macroeconomics. I am currently studying the implications of heterogeneous returns to capital stemming from financial frictions for (i) capital, wealth and inheritance taxation and (ii) place-based entrepreneurial subsidies.  </p>
-                    <p>Contact me by <a href="mailto:marco.irisarrimartinez@manchester.ac.uk">email</a>.<br>
+                    <p>Contact me by <a href="mailto:marko.irisarri@manchester.ac.uk">email</a>.<br>
                         CV: <a href="/cv/cv_marko_irisarri.pdf">resume</a></p>
                     <p>
                         <!-- Smaller GitHub Icon -->
